[gd_scene load_steps=4 format=3 uid="uid://buslo2875wkm"]

[ext_resource type="Script" path="res://main.gd" id="1_b4eov"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2g0p"]
size = Vector2(166, 5275)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dol8t"]
size = Vector2(5317, 191)

[node name="Main" type="Node2D"]
script = ExtResource("1_b4eov")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 5000.0
offset_bottom = 5000.0
color = Color(0.792157, 0.839216, 1, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="PlayerInfo" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 227.0
offset_bottom = 232.0

[node name="VBox" type="VBoxContainer" parent="UI/PlayerInfo"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthLabel" type="Label" parent="UI/PlayerInfo/VBox"]
modulate = Color(1, 0.352941, 1, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "生命值: 100"

[node name="ItemLabel" type="Label" parent="UI/PlayerInfo/VBox"]
modulate = Color(0.995553, 0.615285, 0.240114, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "场上道具: 0"

[node name="OnlinePlayer" type="Label" parent="UI/PlayerInfo/VBox"]
modulate = Color(0.858824, 1, 0.164706, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "在线玩家: 0"

[node name="PositionLabel" type="Label" parent="UI/PlayerInfo/VBox"]
modulate = Color(0.188235, 0.521569, 1, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "位置: X: 0, Y: 0"

[node name="AmmoLabel" type="Label" parent="UI/PlayerInfo/VBox"]
modulate = Color(0.36387, 0.83331, 0.0745223, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "剩余弹药: 100"

[node name="AndroidControl" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_top = -1.0
offset_right = 1151.0
offset_bottom = 647.0

[node name="UpBtn" type="Button" parent="UI/AndroidControl"]
layout_mode = 0
offset_left = 59.0
offset_top = 485.0
offset_right = 109.0
offset_bottom = 535.0
theme_override_font_sizes/font_size = 30
text = "上"

[node name="DownBtn" type="Button" parent="UI/AndroidControl"]
layout_mode = 0
offset_left = 59.0
offset_top = 585.0
offset_right = 109.0
offset_bottom = 635.0
theme_override_font_sizes/font_size = 30
text = "下"

[node name="LeftBtn" type="Button" parent="UI/AndroidControl"]
layout_mode = 0
offset_left = 10.0
offset_top = 535.0
offset_right = 60.0
offset_bottom = 585.0
theme_override_font_sizes/font_size = 30
text = "左"

[node name="RightBtn" type="Button" parent="UI/AndroidControl"]
layout_mode = 0
offset_left = 109.0
offset_top = 535.0
offset_right = 159.0
offset_bottom = 585.0
theme_override_font_sizes/font_size = 30
text = "右"

[node name="Players" type="Node" parent="."]

[node name="Bullets" type="Node" parent="."]

[node name="Items" type="Node" parent="."]

[node name="WorldWalls" type="StaticBody2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldWalls"]
position = Vector2(-86, 2624.5)
shape = SubResource("RectangleShape2D_h2g0p")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WorldWalls"]
position = Vector2(5076, 2421)
shape = SubResource("RectangleShape2D_h2g0p")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WorldWalls"]
position = Vector2(2487.5, -97.5)
shape = SubResource("RectangleShape2D_dol8t")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="WorldWalls"]
position = Vector2(2476, 5093)
shape = SubResource("RectangleShape2D_dol8t")
